<resources>
    <string name="app_name">CountBallsGame</string>
    <string name="tvGameTitle">Count Ball Game</string>
    <string name="tvGameMenu">Choose a difficulty:</string>
    <string name="btEasyMode">Easy</string>
    <string name="btMediumMode">Medium</string>
    <string name="btHardGame">Hard</string>
    <string name="tvReadyMessage">Ready?</string>
    <string name="tvResult">How many balls were there?</string>
    <string name="etResultHint">0</string>
    <string name="tvCorrectAnswer">Correct!</string>
    <string name="tvAnswerMessage">There where:</string>
    <string name="tvWrongAnswer">Incorrect!</string>
    <string name="btContinue">Continue</string>
    <string name="btCheckAnswer">Check answer</string>
    <string name="errorToast">Enter your answer</string>
    <string name="finishToast">Thanks for playing!</string>
    <string name="tvRedBalls">Red balls:</string>
    <string name="tvGreenBalls">Green Balls:</string>
    <string name="tvBlueBalls">Blue Balls:</string>
    <string name="tvRedBallsAnswer">Red Balls: x</string>
    <string name="tvGreenBallsAnswer">Green Balls: x</string>
    <string name="tvBlueBallsAnswer">Blue Balls: x</string>
    <string name="btTakePhoto">Take photo</string>
    <string name="contentDescription_ivRecordPhoto">ivRecordPhoto</string>
</resources>